--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </main>
 
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/cursoemvideo" target="_blank">CursoemVideo</a>.</p>
+        <p>Site criado por <a href="https://reberte.github.io/" target="_blank">Marcos Reberte</a> através do curso <a href="https://www.youtube.com/cursoemvideo" target="_blank">CursoemVideo</a>.</p>
     </footer>
     
 </body>
